# SEC-FILING-RAG

./: .gitignore  README.md  learning.md  pyproject.toml
app/: __init__.py  service.py  streamlit_app.py
ingestion/: __init__.py  chunker.py  config.py  embeddings.py  ingest.py  pdf_extractor.py  schemas.py  section_detector.py  vector_store.py
retrieval/: __init__.py  generator.py  retriever.py  schemas.py
sec_filing_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
